[package]
name = "barbed"
version = "0.0.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["すごいジャン <me@sugoijan.dev>"]
description = "Twitch Helix, EventSub, OAuth, and signing helpers"
readme = false
repository = "https://github.com/sugoijan/barbed"
documentation = "https://docs.rs/barbed"
keywords = ["twitch", "eventsub", "helix", "oauth"]

[dependencies]
anyhow = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "form", "query"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full", "tracing"], optional = true }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-native-roots", "connect"], optional = true }
tracing = { version = "0.1", optional = true }

# Optional: Cloudflare Workers integration
wasm-bindgen = { version = "0.2", optional = true }
worker = { version = "0.7", optional = true }

[features]
cloudflare-worker = ["dep:worker", "dep:wasm-bindgen"]
reqwest-client = ["dep:anyhow", "dep:reqwest", "dep:tokio", "dep:tracing"]
tokio-eventsub = [
    "reqwest-client",
    "dep:futures-util",
    "dep:rustls",
    "dep:tokio-tungstenite",
]

[package.metadata.docs.rs]
all-features = true
